# capaoi

./: .clang-format  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  __init__.py  capaoi.code-workspace  debug.ipynb  main.py  requirements.txt  setup.py
backup/: Capsule_defect_detection_0120.py  Capsule_defect_detection_0130.py  Capsule_defect_detection_0203.py  Capsule_defect_detection_0416_final.py  GUI_0312.py  GUI_0320.py  Image capture.ipynb  control.py  settings.py
backup/AAA/: GUI_GPT.py  GUI_deepseek_R1.py  GUI_deepseek_R2.py  GUI_deepseek_R2_EN.py  GUI详细设计文档.docx  aa.py  bb.py  cc.py  新建Microsoft Visio Drawing.vsdx
backup/AAA/配置文件/: 参数文件_胶囊1.txt  参数文件_胶囊2.txt
backup/Configuration files/: 0_Capsule_Configuration_1.txt  1_Capsule_Configuration_1.txt  Capsule type param table.xlsx
config/: 00_capsule_configuration.txt  0_capsule_configuration.txt
doc/: detect_capsules.md  process_overview.md
samples/: CMakeLists.txt  async.py  grab.cpp  grab.py  hello_balser.py  interface_serial.py  use_vision_agent.py  worker.cpp  worker.py
scripts/: capture_video.py  parse_test_results.py
src/: belt.py  camera_feed.py  camera_thread.py  contours.py  contours_0416_lr.py  defects.py  defects_0416_lr.py  main_window.py  parameter.py  params.py  relay_controller.py  test.ipynb
tests/: test_belt.py  test_detect_contours.py  test_main_window.py  test_preprocess_image.py  test_process_actuation_timestamp.py  test_relay_controller.py  test_relay_hardware.py
utils/: transform.py  transform_0416_lr.py  visualize.py
